[package]
authors = ["Tony B. <tonyb983@gmail.com>"]
categories = ["data-structures", "parser-implementations"]
description = "A tiny ID type that's like UUID except shorter and easier for a user to type in."
edition = "2021"
keywords = ["id", "uuid", "tinyid", "shortid", "guid"]
license = "MPL-2.0"
name = "tinyid"
repository = "https://github.com/tonyb983/tinyid"
version = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.8.0"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
